--- a/week 11/s1/project/css/style.css
+++ b/week 11/s1/project/css/style.css
@@ -129,7 +129,7 @@ body{
 #bu{
   color: #fff4ff;
   margin-bottom: -100px;
-  margin-left: 50px;
+  margin-right: 140px;
   font-size: 70px;
   text-align: center;
   font-family: 'roboto', sans-serif;
