--- a/all/cournometr/css/style.css
+++ b/all/cournometr/css/style.css
@@ -217,6 +217,28 @@
     margin-left: 875px;
     font-size: 50px;
 }
+@media (max-width: 1094px) {
+  .div1{
+      font-size: 130px;
+      margin-right: auto;
+      margin-left: auto;
+  }
+}
+@media (max-width: 720px) {
+   .div1{
+      font-size: 100px;
+      margin-right: auto ;
+      margin-left: auto;
+  }
+}
+
+@media (max-width: 650px) {
+  .div1{
+      font-size: 100px;
+      margin-right: auto;
+      margin-left: auto;
+  }
+}
 
 
 
