--- a/all/weight converter/css/style.css
+++ b/all/weight converter/css/style.css
@@ -48,3 +48,22 @@ h1{
     border-radius: 5px;
     font-size: 25px;
 }
+@media all and (max-width:640px){
+    h1{
+        margin-right: auto;
+        margin-left: 100px;
+        text-align: center;
+    }
+    .con{
+        width: 100px;
+    }
+}
+@media all and (max-width:6px){
+    h1{
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .con{
+        width: 200px;
+    }
+}
