--- a/all/weight converter/css/style.css
+++ b/all/weight converter/css/style.css
@@ -21,7 +21,7 @@ h1{
     color: white;
     font-family: 'Roboto', sans-serif;
     background-color: red;
-    width: 1850px;
+    width: 90%;
     height: 70px;
     border-radius: 5px;
     font-size: 25px;
